--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   background: $darkGrey;
-  opacity: .94;
-  padding-left: 107px;
+  opacity: .97;
+  padding-left: 115px;
   position: fixed;
   z-index: 2;
   width: 100%;
